@startuml
'https://plantuml.com/class-diagram

' GENERATE CLASS DIAGRAM ===========
' Generator       : it.brunasti.java.diagrammer.ClassDiagrammer
' Path            : [./target/classes]
' Java Files Path : [./src/main/java/]
' Configuration   : [./docs/config.json]
' Generated at    : Mon May 18 09:47:05 CEST 2026
'
'   Stat infos    :
'       Files : [24]
'       Lines : [3914]
'     Classes : [23]
'     Methods : [188]
'      Fields : [78]



'!includesub .puml!IT_BRUNASTI_JAVA_DIAGRAMMER
'!includesub .puml!INHERITANCES_IT_BRUNASTI_JAVA_DIAGRAMMER
'!includesub .puml!IMPLEMENTS_IT_BRUNASTI_JAVA_DIAGRAMMER
'!includesub .puml!FIELDS_IT_BRUNASTI_JAVA_DIAGRAMMER
'!includesub .puml!USES_IT_BRUNASTI_JAVA_DIAGRAMMER
'!includesub .puml!IMPORTS_IT_BRUNASTI_JAVA_DIAGRAMMER

'!includesub .puml!IT_BRUNASTI_JAVA_DIAGRAMMER_SPRING_WEB
'!includesub .puml!INHERITANCES_IT_BRUNASTI_JAVA_DIAGRAMMER_SPRING_WEB
'!includesub .puml!IMPLEMENTS_IT_BRUNASTI_JAVA_DIAGRAMMER_SPRING_WEB
'!includesub .puml!FIELDS_IT_BRUNASTI_JAVA_DIAGRAMMER_SPRING_WEB
'!includesub .puml!USES_IT_BRUNASTI_JAVA_DIAGRAMMER_SPRING_WEB
'!includesub .puml!IMPORTS_IT_BRUNASTI_JAVA_DIAGRAMMER_SPRING_WEB



' CLASSES =======
!startsub 
class module-info

!endsub

!startsub IT_BRUNASTI_JAVA_DIAGRAMMER
class it.brunasti.java.diagrammer.ClassDiagrammerMain
class it.brunasti.java.diagrammer.ImportsIdentifier
class it.brunasti.java.diagrammer.Debugger
class it.brunasti.java.diagrammer.Utils
interface it.brunasti.java.diagrammer.package-info
class it.brunasti.java.diagrammer.ClassDiagrammer
class it.brunasti.java.diagrammer.DiagramPlotter

!endsub

!startsub IT_BRUNASTI_JAVA_DIAGRAMMER_SPRING_WEB
interface it.brunasti.java.diagrammer.spring.web.package-info
class it.brunasti.java.diagrammer.spring.web.WebFlowAnalyser
class it.brunasti.java.diagrammer.spring.web.WebPageMaping
class it.brunasti.java.diagrammer.spring.web.WebFlowAnalyserMain

!endsub

' INHERITANCES =======

!startsub INHERITANCES_IT_BRUNASTI_JAVA_DIAGRAMMER

!endsub


!startsub INHERITANCES_IT_BRUNASTI_JAVA_DIAGRAMMER_SPRING_WEB

!endsub

' IMPLEMENT INTERFACE =======

!startsub IMPLEMENTS_IT_BRUNASTI_JAVA_DIAGRAMMER

!endsub


!startsub IMPLEMENTS_IT_BRUNASTI_JAVA_DIAGRAMMER_SPRING_WEB

!endsub

' FIELDS =======

!startsub FIELDS_IT_BRUNASTI_JAVA_DIAGRAMMER
it.brunasti.java.diagrammer.ClassDiagrammerMain --> org.apache.commons.cli.CommandLine
it.brunasti.java.diagrammer.ClassDiagrammerMain --> it.brunasti.java.diagrammer.ClassDiagrammer
it.brunasti.java.diagrammer.ClassDiagrammerMain --> org.apache.commons.cli.Options
it.brunasti.java.diagrammer.ClassDiagrammer --> java.io.PrintStream

!endsub


!startsub FIELDS_IT_BRUNASTI_JAVA_DIAGRAMMER_SPRING_WEB
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyser --> java.io.PrintStream
it.brunasti.java.diagrammer.spring.web.WebPageMaping --> java.io.File
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyserMain --> org.apache.commons.cli.CommandLine
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyserMain --> it.brunasti.java.diagrammer.spring.web.WebFlowAnalyser
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyserMain --> org.apache.commons.cli.Options

!endsub

' USES =======

!startsub USES_IT_BRUNASTI_JAVA_DIAGRAMMER
it.brunasti.java.diagrammer.ClassDiagrammerMain ..> org.apache.commons.cli.Options
it.brunasti.java.diagrammer.Utils ..> java.io.PrintStream
it.brunasti.java.diagrammer.Utils ..> org.json.simple.JSONObject
it.brunasti.java.diagrammer.ClassDiagrammer ..> java.io.PrintStream
it.brunasti.java.diagrammer.ClassDiagrammer ..> org.json.simple.JSONObject
it.brunasti.java.diagrammer.ClassDiagrammer ..> org.apache.bcel.classfile.JavaClass
it.brunasti.java.diagrammer.ClassDiagrammer ..> org.apache.bcel.classfile.Field
it.brunasti.java.diagrammer.ClassDiagrammer ..> org.apache.bcel.util.ClassLoaderRepository
it.brunasti.java.diagrammer.DiagramPlotter ..> java.nio.file.Path

!endsub


!startsub USES_IT_BRUNASTI_JAVA_DIAGRAMMER_SPRING_WEB
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyser ..> java.io.PrintStream
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyser ..> org.json.simple.JSONObject
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyserMain ..> org.apache.commons.cli.Options

!endsub

' IMPORTS =======
' Java Files Path : ./src/main/java/
' module-info


!startsub IMPORTS_IT_BRUNASTI_JAVA_DIAGRAMMER
' it.brunasti.java.diagrammer.ClassDiagrammerMain
it.brunasti.java.diagrammer.ClassDiagrammerMain ..o org.apache.commons.cli.CommandLineParser
it.brunasti.java.diagrammer.ClassDiagrammerMain ..o org.apache.commons.cli.ParseException
it.brunasti.java.diagrammer.ClassDiagrammerMain ..o org.apache.commons.cli.Options
it.brunasti.java.diagrammer.ClassDiagrammerMain ..o org.apache.commons.cli.CommandLine
it.brunasti.java.diagrammer.ClassDiagrammerMain ..o org.apache.commons.cli.HelpFormatter
it.brunasti.java.diagrammer.ClassDiagrammerMain ..o org.apache.commons.cli.Option
it.brunasti.java.diagrammer.ClassDiagrammerMain ..o org.apache.commons.cli.DefaultParser

' it.brunasti.java.diagrammer.ImportsIdentifier
it.brunasti.java.diagrammer.ImportsIdentifier ..o com.thoughtworks.qdox.JavaProjectBuilder
it.brunasti.java.diagrammer.ImportsIdentifier ..o com.thoughtworks.qdox.model.JavaSource
it.brunasti.java.diagrammer.ImportsIdentifier ..o com.thoughtworks.qdox.parser.ParseException
it.brunasti.java.diagrammer.ImportsIdentifier ..o java.io.FileReader
it.brunasti.java.diagrammer.ImportsIdentifier ..o java.io.FileNotFoundException

' it.brunasti.java.diagrammer.Debugger

' it.brunasti.java.diagrammer.Utils
it.brunasti.java.diagrammer.Utils ..o org.json.simple.JSONObject

' it.brunasti.java.diagrammer.package-info

' it.brunasti.java.diagrammer.ClassDiagrammer
it.brunasti.java.diagrammer.ClassDiagrammer ..o java.io.PrintStream
it.brunasti.java.diagrammer.ClassDiagrammer ..o org.apache.bcel.util.ClassLoaderRepository
it.brunasti.java.diagrammer.ClassDiagrammer ..o org.apache.bcel.classfile.Field
it.brunasti.java.diagrammer.ClassDiagrammer ..o java.net.URL
it.brunasti.java.diagrammer.ClassDiagrammer ..o org.apache.bcel.classfile.Method
it.brunasti.java.diagrammer.ClassDiagrammer ..o java.io.IOException
it.brunasti.java.diagrammer.ClassDiagrammer ..o org.json.simple.JSONArray
it.brunasti.java.diagrammer.ClassDiagrammer ..o java.io.File
it.brunasti.java.diagrammer.ClassDiagrammer ..o java.net.URLClassLoader
it.brunasti.java.diagrammer.ClassDiagrammer ..o org.json.simple.JSONObject
it.brunasti.java.diagrammer.ClassDiagrammer ..o org.apache.bcel.generic.Type
it.brunasti.java.diagrammer.ClassDiagrammer ..o org.apache.bcel.classfile.JavaClass

' it.brunasti.java.diagrammer.DiagramPlotter
it.brunasti.java.diagrammer.DiagramPlotter ..o net.sourceforge.plantuml.core.Diagram
it.brunasti.java.diagrammer.DiagramPlotter ..o net.sourceforge.plantuml.file.SuggestedFile
it.brunasti.java.diagrammer.DiagramPlotter ..o net.sourceforge.plantuml.FileFormatOption
it.brunasti.java.diagrammer.DiagramPlotter ..o java.io.IOException
it.brunasti.java.diagrammer.DiagramPlotter ..o net.sourceforge.plantuml.FileImageData
it.brunasti.java.diagrammer.DiagramPlotter ..o  net.sourceforge.plantuml.FileFormat.PNG
it.brunasti.java.diagrammer.DiagramPlotter ..o java.nio.file.Paths
it.brunasti.java.diagrammer.DiagramPlotter ..o net.sourceforge.plantuml.PSystemUtils
it.brunasti.java.diagrammer.DiagramPlotter ..o net.sourceforge.plantuml.preproc.Defines
it.brunasti.java.diagrammer.DiagramPlotter ..o  java.nio.charset.StandardCharsets.UTF_8
it.brunasti.java.diagrammer.DiagramPlotter ..o java.nio.file.Path
it.brunasti.java.diagrammer.DiagramPlotter ..o net.sourceforge.plantuml.SourceStringReader

' it.brunasti.java.diagrammer.ClassDiagrammer

' it.brunasti.java.diagrammer.Utils

' it.brunasti.java.diagrammer.package-info

' it.brunasti.java.diagrammer.Debugger

' it.brunasti.java.diagrammer.ClassDiagrammerMain

' it.brunasti.java.diagrammer.ImportsIdentifier

' it.brunasti.java.diagrammer.DiagramPlotter


!endsub


!startsub IMPORTS_IT_BRUNASTI_JAVA_DIAGRAMMER_SPRING_WEB
' it.brunasti.java.diagrammer.spring.web.package-info

' it.brunasti.java.diagrammer.spring.web.WebFlowAnalyser
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyser ..o java.io.PrintStream
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyser ..o it.brunasti.java.diagrammer.Utils
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyser ..o org.json.simple.JSONObject
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyser ..o it.brunasti.java.diagrammer.Debugger
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyser ..o java.io.IOException

' it.brunasti.java.diagrammer.spring.web.WebPageMaping
it.brunasti.java.diagrammer.spring.web.WebPageMaping ..o java.io.File

' it.brunasti.java.diagrammer.spring.web.WebFlowAnalyserMain
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyserMain ..o java.io.PrintStream
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyserMain ..o java.io.PrintWriter
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyserMain ..o it.brunasti.java.diagrammer.Utils
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyserMain ..o it.brunasti.java.diagrammer.Debugger
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyserMain ..o java.io.FileOutputStream
it.brunasti.java.diagrammer.spring.web.WebFlowAnalyserMain ..o java.io.IOException

' it.brunasti.java.diagrammer.spring.web.WebFlowAnalyser

' it.brunasti.java.diagrammer.spring.web.WebFlowAnalyserMain

' it.brunasti.java.diagrammer.spring.web.package-info

' it.brunasti.java.diagrammer.spring.web.WebPageMaping


!endsub


@enduml
